Buttons for switching parameters on the panel

--- a/src/blocks/switch-buttons/switch-buttons.pug
+++ b/src/blocks/switch-buttons/switch-buttons.pug
@@ -1,3 +1,8 @@
-mixin sliderParamButton(textParam, )
-    div 
-        input.paramInput
+mixin sliderParamButton(textParam, paramName )
+    
+    div.container-of-switch-params
+        div.container-of-switch-params-text=paramName
+        input.paramInput(type=textParam)
+        button.switch-button
+
+    
