--- a/src/template.pug
+++ b/src/template.pug
@@ -1,3 +1,4 @@
+include ./blocks/switch-buttons/switch-buttons
 br
 br
 div(id="rootq")
@@ -23,3 +24,11 @@ br
 br
 br
 div(id="qwer")
+   
+br
+br
+br
+
+
+
+
