--- a/src/blocks/switch-buttons/switch-buttons.scss
+++ b/src/blocks/switch-buttons/switch-buttons.scss
@@ -1,1 +1,34 @@
+.paramInput {
+    height: 20px;
+    width: 60px;
+    font-size: 12px;
+    display: inline-block;
+    position: absolute;
+    left: 60px;
+}
+
+.switch-button {
+    width: 20px;
+    height: 20px;
+    background-color: blue;
     
+    display: inline-block;
+    position: absolute;
+    left: 120px;
+}
+
+.container-of-switch-params {
+    height: 20px;
+    position: relative;
+    margin-bottom: 20px;
+    margin-left: 320px;
+    margin-top: -10px;
+    //display: inline;
+}
+.container-of-switch-params-text {
+    width: 60px;
+    position: absolute;
+    text-align: center;
+    font-size: 12px;
+    vertical-align: middle;
+}
