--- a/src/template.pug
+++ b/src/template.pug
@@ -1,7 +1,7 @@
 include ./blocks/switch-buttons/switch-buttons
 br
 br
-div(id="rootq")
+div(id="1")
 br
 br
 br
@@ -10,7 +10,7 @@ br
 br
 br
 br
-div(id="qwe")
+div(id="2")
 br
 br
 br
@@ -23,7 +23,7 @@ br
 br
 br
 br
-div(id="qwer")
+div(id="3")
    
 br
 br
